--- a/assets/stylesheets/course/index.css
+++ b/assets/stylesheets/course/index.css
@@ -2,7 +2,7 @@
 
 @block course {
   @element title {
-    margin-bottom: calc(var(--grid-gutter));
+    margin-bottom: calc(var(--spacing));
   }
 
   @element overview {
@@ -13,13 +13,13 @@
       border-radius: var(--border-radius);
       box-shadow: var(--card-box-shadow);
       width: 228px;
-      margin: 0 0 var(--grid-gutter) var(--grid-gutter);
+      margin: 0 0 var(--spacing) var(--spacing);
     }
   }
 
   @element overview-title {
     border-bottom: 1px solid var(--color-sidebar-seperator);
-    padding: calc(var(--grid-gutter) / 2) 0;
+    padding: calc(var(--spacing) / 2) 0;
     margin: 0;
     line-height: 1.31;
     font-weight: normal;
@@ -30,7 +30,7 @@
   @element overview-item {
     display: flex;
     align-items: center;
-    padding: calc(var(--grid-gutter) / 2);
+    padding: calc(var(--spacing) / 2);
     border-bottom: 1px solid var(--color-sidebar-seperator);
 
     line-height: 1.54;
@@ -41,7 +41,7 @@
     flex: 0 0 auto;
     width: 24px;
     height: 24px;
-    padding-right: calc(var(--grid-gutter) / 2);
+    padding-right: calc(var(--spacing) / 2);
   }
 
   @element overview-value {
@@ -49,7 +49,7 @@
   }
 
   @element overview-cta-wrapper {
-    padding: calc(var(--grid-gutter) / 2) 0;
+    padding: calc(var(--spacing) / 2) 0;
     text-align: center;
   }
   @element overview-cta {
