--- a/assets/stylesheets/global/footer.css
+++ b/assets/stylesheets/global/footer.css
@@ -1,6 +1,9 @@
 @block footer {
-  margin-top: var(--grid-gutter) 0;
-  padding: var(--grid-gutter) 0;
+  padding: var(--spacing) 0;
+
+  & p {
+    margin: 0;
+  }
 
   @element upper {
     display: flex;
@@ -32,7 +35,7 @@
       width: 138px;
 
       & + a {
-        margin-left: var(--grid-gutter);
+        margin-left: calc(var(--spacing) * 0.25);
       }
 
       & img {
@@ -57,7 +60,7 @@
     flex: 0 0 auto;
     width: 24px;
     height: 27px;
-    margin-right: var(--grid-gutter);
+    margin-right: calc(var(--spacing) * 0.5);
   }
 
   @element disclaimer-text {
@@ -72,10 +75,10 @@
     flex: 0 0 auto;
     display: flex;
     align-items: center;
-    padding: 0 var(--grid-gutter);
+    padding: 0 0 0 var(--spacing);
 
     & a + a {
-      margin-left: var(--grid-gutter);
+      margin-left: calc(var(--spacing) * 0.5);
     }
 
     & img {
