--- a/assets/stylesheets/landing-page/modules/copy.css
+++ b/assets/stylesheets/landing-page/modules/copy.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: calc(var(--grid-gutter) * 0.75) 0;
+    padding: calc(var(--spacing) * 0.75) 0;
     background-color: var(--module-copy-emphasized-bg);
     border-radius: var(--border-radius);
     color: var(--module-copy-emphasized-color);
@@ -24,10 +24,10 @@
     @modifier emphasized {
       flex: 1 1 auto;
       width: 50vw;
-      padding: 0 var(--grid-gutter);
+      padding: 0 var(--spacing);
 
       @media (--breakpoint-desktop) {
-        padding-left: var(--grid-gutter);
+        padding-left: var(--spacing);
       }
     }
   }
@@ -41,7 +41,7 @@
 
       @media (--breakpoint-desktop) {
         flex: 1 1 auto;
-        padding: 0 var(--grid-gutter);
+        padding: 0 var(--spacing);
         width: 20vw;
       }
     }
