--- a/assets/stylesheets/layout/grid-list.css
+++ b/assets/stylesheets/layout/grid-list.css
@@ -4,18 +4,18 @@
   justify-content: space-between;
 
   @media (--breakpoint-desktop) {
-    flex: 0 0 calc(50% - var(--grid-gutter));
-    margin: 0 calc(var(--grid-gutter) / 2 * -1);
+    flex: 0 0 calc(50% - var(--spacing));
+    margin: 0 calc(var(--spacing) / 2 * -1);
   }
 
   @element item {
     flex: 0 0 100%;
-    margin-bottom: var(--grid-gutter);
+    margin-bottom: var(--spacing);
 
     @media (--breakpoint-desktop) {
       box-sizing: border-box;
-      flex: 0 0 calc(50% - var(--grid-gutter));
-      margin: 0 calc(var(--grid-gutter) / 2) var(--grid-gutter);
+      flex: 0 0 calc(50% - var(--spacing));
+      margin: 0 calc(var(--spacing) / 2) var(--spacing);
     }
   }
 }
