--- a/assets/stylesheets/layout/layout-no-sidebar.css
+++ b/assets/stylesheets/layout/layout-no-sidebar.css
@@ -1,11 +1,11 @@
 @block layout-no-sidebar {
-  padding: 0 calc(var(--grid-gutter) / 2);
+  padding: 0 calc(var(--spacing) / 2);
   max-width: var(--content-max-width);
   margin: 0 auto;
   width: 100%;
   box-sizing: border-box;
 
   @media (--breakpoint-desktop) {
-    padding-left: calc(var(--layout-sidebar-sidebar-width) + var(--grid-gutter));
+    padding-left: calc(var(--layout-sidebar-sidebar-width) + var(--spacing));
   }
 }
